# xmind-extractor-combiner

./: README.md  package-lock.json  package.json
docs/: Developing.md
public/locales/en/: translation.json
public/locales/zh/: translation.json
src/: App.tsx  ZipXmind.tsx  helper.tsx  i18n.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
