[package]
name = "xmind-extractor-combiner"
version = "0.0.1"
description = "XMind File Extractor/Combiner"
authors = ["tangramor"]
license = ""
repository = "https://github.com/tangramor/xmind-extractor-combiner"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
walkdir = "2.3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
